--- a/index.html
+++ b/index.html
@@ -40,17 +40,16 @@
 
       <nav  class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Inicio</a></li>
-          <li class="drop-down"><a href="">Con&oacute;cenos</a>
+          <li><a href="index.html">Inicio</a></li>
+          <li class="drop-down"><a href="">Conócenos</a>
             <ul>
                 <li><a href="#quienes-somos"">&iquest;Qui&eacute;nes somos?</a></li>
-                <li><a href="#cultura">Nuestra Misi&oacute;n</a></li>
-                <li><a href="#cultura">Nuestra Visi&oacute;n</a></li>
-                <li><a href="#comites">Comit&eacute;s</a></li>
+                <li><a href="#cultura">Misión y Visión</a></li>
+                <li><a href="#comites">Direcciones</a></li>
+                <li><a href="#impacto">Mesa Directiva</a></li>
             </ul>
           </li>
-          <li><a href="#impacto">Impacto</a></li>
-          <li><a href="#proyectos">Proyectos</a>
+          <li><a href="#proyectos">Galería</a>
           <li><a href="#noticias">Noticias</a></li>
           <li><a href="#contacto">Contacto</a></li>
           <br>
@@ -545,7 +544,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Proyectos</h2>
+          <h2>Galería</h2>
           <p>Exploremos juntos!</p>
         </div>
 
@@ -563,14 +562,6 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Proyecto 2019 1</h4>
-              <p>Descripc&oacute;n</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2019 1"><i class="bx bx-zoom-in"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
-            </div>
-          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
@@ -578,56 +569,6 @@
               <h4>Proyecto 2021 3</h4>
               <p>Descripc&oacute;n</p>
               <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2021 3"><i class="bx bx-zoom-in"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Proyecto 2019 2</h4>
-              <p>Descripc&oacute;n</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2019 2"><i class="bx bx-zoom-in"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Proyecto 2020 2</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2020 2"><i class="bx bx-zoom-in"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Proyecto 2021 2</h4>
-              <p>Descripc&oacute;n</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2021 2"><i class="bx bx-zoom-in"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Proyecto 2019 3</h4>
-              <p>Descripc&oacute;n</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2019 3"><i class="bx bx-zoom-in"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Proyecto 2020 1</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2020 1"><i class="bx bx-zoom-in"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
             </div>
           </div>
@@ -770,7 +711,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 col-sm-4 footer-links">
-            <h4>Proyectos</h4>
+            <h4>Galería</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Mil Esferas con Causa</a></li>
             </ul>
