--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Galería</h2>
+          <h2>Proyectos</h2>
           <p>Exploremos juntos!</p>
         </div>
 
@@ -562,6 +562,14 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Proyecto 2019 1</h4>
+              <p>Descripc&oacute;n</p>
+              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2019 1"><i class="bx bx-zoom-in"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
@@ -569,6 +577,56 @@
               <h4>Proyecto 2021 3</h4>
               <p>Descripc&oacute;n</p>
               <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2021 3"><i class="bx bx-zoom-in"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Proyecto 2019 2</h4>
+              <p>Descripc&oacute;n</p>
+              <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2019 2"><i class="bx bx-zoom-in"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Proyecto 2020 2</h4>
+              <p>Card</p>
+              <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2020 2"><i class="bx bx-zoom-in"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Proyecto 2021 2</h4>
+              <p>Descripc&oacute;n</p>
+              <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2021 2"><i class="bx bx-zoom-in"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Proyecto 2019 3</h4>
+              <p>Descripc&oacute;n</p>
+              <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2019 3"><i class="bx bx-zoom-in"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Proyecto 2020 1</h4>
+              <p>Card</p>
+              <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Proyecto 2020 1"><i class="bx bx-zoom-in"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-message-square-detail"></i></a>
             </div>
           </div>
