--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
               <div class="info-box mt-4">
                 <i class="bx bx-envelope"></i>
                 <h3>Email</h3>
-                <p>info@pionerosdelcambio.org</p>
+                <a href="mailto:pionerosdelcambio@gmail.com">pionerosdelcambio@gmail.com</a>
               </div>
             </div>
             <div class="col-md-6">
@@ -807,7 +807,7 @@
         </div>
 
         <div class="col-lg-5 mt-8 ml-sm-0 text-center">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd8GxK3mTUcsqX_XqPCwSKmi6trxjXywld89JHVFE-hSSlOZg/viewform?embedded=true"
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIyg_4gXMh1yN9GffRKgp3QkgNCFPH4JgWeBdOgDOGta-kGQ/viewform?embedded=true"
                     width="360" 
                     height="350" 
                     frameborder="0" 
@@ -842,16 +842,19 @@
             <h4>Links rápidos</h4>
             <ul class="footer-list">
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Inicio</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#abo">Con&oacute;cenos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Noticias</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">Con&oacute;cenos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#cultura">Misión y Visión</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#comites">Comités</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 col-sm-4 footer-links">
             <h4>Proyectos</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#projects">Mil Esferas con Causa</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#projects">Torneo Solidaridad</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#2021">Mil Esferas con Causa</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#2020">Torneo Solidaridad</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#2020">Reforestación 2020</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#2019">Conferencia "No seas 1 + "</a></li>
             </ul>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-4 footer-links">
