--- a/index.html
+++ b/index.html
@@ -517,8 +517,8 @@
             </div>
 
             <div class="testimonial-item">
-            <img src="assets/img/team/fer.png" class="testimonial-img" alt="">
-            <h3><a class="directores" href='https://www.instagram.com/fermagno_/'>Fernando Magno</a></h3>
+            <img src="assets/img/team/carlita.png" class="testimonial-img" alt="">
+            <h3><a class="directores" href='https://www.instagram.com/maldonado_carlaa/'>Carla Maldonado</a></h3>
             <h4>Director ejecutivo</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -528,8 +528,8 @@
             </div>
           
             <div class="testimonial-item">
-            <img src="assets/img/team/carlita.png" class="testimonial-img" alt="">
-            <h3><a class="directores" href='https://www.instagram.com/maldonado_carlaa/'>Carla Maldonado</a></h3>
+            <img src="assets/img/team/alo.png" class="testimonial-img" alt="">
+            <h3><a class="directores" href='https://www.instagram.com/alo1904/'>Alondra Peñaloza</a></h3>
             <h4>Sub-directora</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
