Added new banners

--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@
                                 
                               </p>
                               <p class="font-italic">
-                                Pues ver que todo sea usando los recursos necesarios y de manera responsable.
+                                Consolidar a Pioneros del Cambio como un usuario responsable de los recursos y consciente de las problemáticas ambientales actuales.
                               </p>
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 text-center">
-                              <img src="assets/img/gifs/dma.gif" autoplay loop alt="" class="img-fluid">
+                              <img src="assets/img/team/fery.png" autoplay loop alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
                               </p>
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 text-center">
-                                <img src="assets/img/gifs/deg.gif" autoplay loop alt="" class="img-fluid">                            </div>
+                                <img src="assets/img/team/nato.png" autoplay loop alt="" class="img-fluid">                            </div>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="pills-dv" role="tabpanel" aria-labelledby="pills-dv">
@@ -325,7 +325,7 @@
                               </p>
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 text-center">
-                                <img src="assets/img/gifs/dv.gif" autoplay loop alt="" class="img-fluid" width="350">                            </div>
+                                <img src="assets/img/team/mariana.png" autoplay loop alt="" class="img-fluid">                            </div>
                         </div>
                     </div>
                     <div class="tab-pane fade show active" id="pills-dpw" role="tabpanel" aria-labelledby="pills-dpw">
@@ -347,7 +347,7 @@
                               </p>
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 text-center">
-                                <img src="assets/img/gifs/dpw.gif" autoplay loop alt="" class="img-fluid">                            </div>
+                                <img src="assets/img/team/george.png" autoplay loop alt="" class="img-fluid">                            </div>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="pills-dp" role="tabpanel" aria-labelledby="pills-dp">
@@ -370,7 +370,7 @@
                         <div class="row">
                             <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
                                 <h3>Direcci&oacute;n de Comunicación</h3>
-                                <h6>Representante: <a href="https://www.instagram.com/_lupita_mc/">Lupita Moreno, </a><a href="https://www.instagram.com/fer.nanda_cuevas/">Fernanda Cuevas y </a><a href="https://www.instagram.com/diana_lss8/">Diana Saldivar</a></h6>
+                                <h6>Representante: <a href="https://www.instagram.com/_lupita_mc/">Lupita Moreno</a></h6>
                                 <br>
                                 <p class="font-italic">
                                     En comunicación nos encargamos de la imagen de pioneros del cambio A.C. está área diseña los horarios y estrategias de comunicación para maximizar el alcance del público, con esfuerzo combinado realizamos el diseño de posts, edición de videos, historias y demás material que se suba a redes sociales como <a href="https://www.instagram.com/pioneros.delcambio" >Instagram</a> y <a href="https://www.facebook.com/pionerosdelcambio" >Facebook</a>.
@@ -380,7 +380,7 @@
                                 </p>
                             </div>
                             <div class="col-lg-6 order-1 order-lg-2 text-center">
-                                <img src="assets/img/gifs/dcom.gif" autoplay loop alt="" class="img-fluid">                            
+                                <img src="assets/img/team/lupita.png" autoplay loop alt="" class="img-fluid">                            
                             </div>
                         </div>
                     </div>
